<resources>
    <string name="app_name">Tenretni</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_gateways">Gateways</string>
    <string name="title_network">Network</string>
    <string name="title_activity_loading">Terentni</string>

    <string name="loadingFormat">Loading %d/%d …</string>
    <string name="ticketNumber">Ticket %s</string>
    <string name="apiErrorMessage">Error while retriving the data from the server.</string>

    <string name="txtPriorityLow">Low</string>
    <string name="txtPriorityNormal">Normal</string>
    <string name="txtPriorityHigh">High</string>
    <string name="txtPriorityCritical">Critical</string>

    <string name="txtStateOpen">Open</string>
    <string name="txtStateSolve">Solved</string>
    <string name="install">Install</string>
    <string name="solve">Solved</string>
    <string name="open">Open</string>

    <string name="txtGatewayStateOnline">Online</string>
    <string name="txtGatewayStateOffline">Offline</string>
    <string name="canceled_installation">Installation Canceled</string>
    <string name="cam_permission_missing">Camera Permission is Missing</string>
    <string name="txtPing">%d ns</string>
    <string name="txtSpeed">%.2f Ebps</string>
    <string name="txtSignal">%d dBm</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="update">Update</string>
    <string name="reboot">Reboot</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>