<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tickets">

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.example.tenretni.ui.tickets.list.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" >
        <action
            android:id="@+id/action_navigation_tickets_to_detailTicketFragment"
            app:destination="@id/detailTicketFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gateways"
        android:name="com.example.tenretni.ui.dashboard.DashboardFragment"
        android:label="@string/title_gateways"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_network"
        android:name="com.example.tenretni.ui.notifications.NotificationsFragment"
        android:label="@string/title_network"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/detailTicketFragment"
        android:name="com.example.tenretni.ui.tickets.detail.DetailTicketFragment"
        android:label="fragment_detail_ticket"
        tools:layout="@layout/fragment_detail_ticket" >
        <argument
            android:name="href"
            app:argType="string" />
    </fragment>
</navigation>