<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tickets.detail.DetailTicketFragment">

    <include
        android:id="@+id/include"
        layout="@layout/item_ticket"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="401dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInstall"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txvCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Nom Client" />

            <TextView
                android:id="@+id/txvCustomerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/txvCustomerName"
                app:layout_constraintStart_toStartOf="@+id/txvCustomerName"
                app:layout_constraintTop_toBottomOf="@+id/txvCustomerName"
                tools:text="Adresse" />

            <TextView
                android:id="@+id/txvCustomerCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/txvCustomerAddress"
                app:layout_constraintStart_toStartOf="@+id/txvCustomerAddress"
                app:layout_constraintTop_toBottomOf="@+id/txvCustomerAddress"
                tools:text="Ville" />

            <ImageView
                android:id="@+id/imvCustomerCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/cad"
                app:layout_constraintEnd_toEndOf="@+id/txvCustomerCity"
                app:layout_constraintStart_toStartOf="@+id/txvCustomerCity"
                app:layout_constraintTop_toBottomOf="@+id/txvCustomerCity" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title_gateways"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imvCustomerCountry"
                app:layout_constraintStart_toStartOf="@+id/imvCustomerCountry"
                app:layout_constraintTop_toBottomOf="@+id/imvCustomerCountry" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                android:src="@drawable/baseline_my_location_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvGateways"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:spanCount="2"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_gateways"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install"
        app:layout_constraintEnd_toStartOf="@+id/btnSolve"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="675dp" />

    <Button
        android:id="@+id/btnSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        app:layout_constraintBottom_toBottomOf="@+id/btnInstall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnInstall"
        app:layout_constraintTop_toTopOf="@+id/btnInstall" />

</androidx.constraintlayout.widget.ConstraintLayout>